logs/Slang/generated/hdlconv/hdlconvertor_p837.sv.log
name: hdlconvertor_p837
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:1:1: error: expected member
primitive jk_edge_ff (q, clock, j, k, preset, clear);
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:4:1: error: expected member
table
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:7:1: error: expected member
? ?? *1 : 1 : 1 ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:8:1: error: expected member
? ?? 10 : ? : 0 ; // clear logic
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:9:1: error: expected member
? ?? 1* : 0 : 0 ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:10:1: error: expected member
r 00 00 : 0 : 1 ; // normal clocking cases
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:11:1: error: expected member
r 00 11 : ? : - ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:12:1: error: expected member
r 01 11 : ? : 0 ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:13:1: error: expected member
r 10 11 : ? : 1 ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:14:1: error: expected member
r 11 11 : 0 : 1 ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:15:1: error: expected member
r 11 11 : 1 : 0 ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:16:1: error: expected member
f ?? ?? : ? : - ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:17:1: error: expected member
b *? ?? : ? : - ; // j and k transition cases
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:18:1: error: expected member
b ?* ?? : ? : - ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p837.sv:19:1: error: expected member
endtable
^~~~~~~~
